# bevy-fps-starter

./: .gitignore  ANIMATION_MOVEMENT_IMPLEMENTATION.md  CHANGELOG.md  Cargo.toml  README.md  TESTING_GUIDE.md  config.example.toml  dev.sh
assets/characters/Shooter Pack/: firing rifle.fbx  jump backward.fbx  jump forward.fbx  rifle aiming idle.fbx  rifle run.fbx  run backwards.fbx  start walking backwards.fbx  start walking.fbx  stop walking.fbx  strafe (2).fbx  strafe.fbx  walk backwards stop.fbx  walking backwards.fbx  walking to dying.fbx  walking.fbx
assets/maps/: cs_town.bsp
src/: assets.rs  audio.rs  fps_controller.rs  interaction.rs  lighting.rs  main.rs  maps.rs  physics.rs  ui.rs  weapons.rs
src/content/: assets.rs  maps.rs  mod.rs
src/core/: fps_controller.rs  mod.rs
src/debug/: inspector.rs  mod.rs
src/gameplay/: interaction.rs  mod.rs  weapons.rs
src/rendering/: mod.rs
src/ui/: mod.rs  ui.rs
src/ui/networking/: mod.rs  multiplayer.rs
src/utils/: game_setup.rs  mod.rs
