[package]
name = "bevy-fps-starter"
version = "0.1.0"
edition = "2021"
description = "A Bevy 0.16 FPS starter project in the style of Half-Life 1/Counter-Strike with BSP map loading, physics, and multiplayer support"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mcbernie/bevy-fps-starter"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline", 
    "bevy_asset",
    "bevy_scene",
    "bevy_gltf",
    "bevy_ui",
    "bevy_text",
    "bevy_sprite",
    "animation",
    "bevy_animation",
    "bevy_audio",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "tonemapping_luts",
    "default_font",
    "x11",
    "multi_threaded",
    "vorbis",
] }

# Inspector
bevy-inspector-egui = "0.33"

egui = "0.32"

bevy_egui = { version = "0.36.0", default-features = false }

# Physics
avian3d = "0.3"

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking"]

[[bin]]
name = "fps_starter"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3